--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -27,6 +27,8 @@ jobs:
 
       - name: Check out code
         uses: actions/checkout@v3
+        with:
+          persist-credentials: false
 
       - name: Run markdownlint
         run: markdownlint .
