--- a/.github/workflows/macos-build.yml
+++ b/.github/workflows/macos-build.yml
@@ -23,12 +23,15 @@ jobs:
     steps:
       - name: Check out repository
         uses: actions/checkout@v3
+        with:
+          persist-credentials: false
 
       - name: Check out vcpkg
         uses: actions/checkout@v3
         with:
           repository: microsoft/vcpkg
           path: ${{ github.workspace }}/vcpkg
+          persist-credentials: false
 
       - name: Apply vcpkg cache
         id: vcpkg-cache
